infra/terraform/vpc.tf
#########
#  VPC  #
#########

resource "aws_vpc" "readerslounge" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "readerslounge-vpc"
  }
}
